@@ -1736,6 +1736,286 @@ CHI_warlord_era = {
 			factor = 100
 		}
 	}
+	CHI_activate_socialist_influence = {
+		icon = revolt
+		allowed = {
+			is_china_or_warlord_no_tt = yes
+		}
+		visible = {
+			has_country_flag = CHI_soviet_republic_flag
+			FROM = {
+				is_chinese_core = yes
+				owner = {
+					is_china_or_warlord_no_tt = yes
+					OR = {
+						has_war_with = ROOT
+						ROOT = {
+							NOT = { has_country_flag = long_march }
+						}
+					}
+				}
+				OR = {
+					has_dynamic_modifier = {
+						modifier = chinese_soviet_heavy_modifier
+					}
+					has_dynamic_modifier = {
+						modifier = chinese_soviet_normal_modifier
+					}
+					has_dynamic_modifier = {
+						modifier = chinese_soviet_low_modifier
+					}
+					any_neighbor_state = {
+						OR = {
+							has_dynamic_modifier = {
+								modifier = chinese_soviet_heavy_modifier
+							}
+							has_dynamic_modifier = {
+								modifier = chinese_soviet_normal_modifier
+							}
+							has_dynamic_modifier = {
+								modifier = chinese_soviet_low_modifier
+							}
+						}
+					}
+				}
+			}
+		}
+		days_remove = 30
+		cost = 0
+		fire_only_once = no
+		cancel_if_not_visible = yes
+		days_re_enable = 60
+		custom_cost_trigger = {
+			command_power > 9.9
+		}
+		custom_cost_text = decision_cost_CP_10
+		state_target = yes
+		target_trigger = {
+			FROM = {
+				OR = {
+					has_dynamic_modifier = {
+						modifier = chinese_soviet_heavy_modifier
+					}
+					has_dynamic_modifier = {
+						modifier = chinese_soviet_normal_modifier
+					}
+					has_dynamic_modifier = {
+						modifier = chinese_soviet_low_modifier
+					}
+					any_neighbor_state = {
+						OR = {
+							has_dynamic_modifier = {
+								modifier = chinese_soviet_heavy_modifier
+							}
+							has_dynamic_modifier = {
+								modifier = chinese_soviet_normal_modifier
+							}
+							has_dynamic_modifier = {
+								modifier = chinese_soviet_low_modifier
+							}
+						}
+					}
+				}
+			}
+		}
+		on_map_mode = map_only
+		complete_effect = {
+			add_command_power = -10
+		}
+		remove_effect = {
+			FROM = {
+				chinese_soviet_modifier_upgrade = yes
+			}
+		}
+		ai_will_do = {
+			factor = 100
+			modifier = {
+				factor = 5
+				FROM = {
+					OR = {
+						state = 622
+						state = 890
+						state = 891
+					}
+				}
+			}
+			modifier = {
+				factor = 2
+				FROM = {
+					OR = {
+						state = 600
+						state = 602
+						state = 620
+						state = 893
+						state = 1046
+					}
+				}
+			}
+		}
+	}
+	CHI_raise_socialist_militia = {
+		icon = revolt
+		allowed = {
+			is_china_or_warlord_no_tt = yes
+		}
+		visible = {
+			has_country_flag = CHI_soviet_republic_flag
+			FROM = {
+				is_chinese_core = yes
+				owner = {
+					is_china_or_warlord_no_tt = yes
+					has_war_with = ROOT
+				}
+				OR = {
+					has_dynamic_modifier = {
+						modifier = chinese_soviet_heavy_modifier
+					}
+					has_dynamic_modifier = {
+						modifier = chinese_soviet_normal_modifier
+					}
+					has_dynamic_modifier = {
+						modifier = chinese_soviet_low_modifier
+					}
+				}
+			}
+		}
+		days_remove = 30
+		cost = 40
+		fire_only_once = no
+		cancel_if_not_visible = yes
+		days_re_enable = 120
+		custom_cost_trigger = {
+			command_power > 9.9
+		}
+		custom_cost_text = decision_cost_CP_10
+		state_target = yes
+		target_trigger = {
+			FROM = {
+				OR = {
+					has_dynamic_modifier = {
+						modifier = chinese_soviet_heavy_modifier
+					}
+					has_dynamic_modifier = {
+						modifier = chinese_soviet_normal_modifier
+					}
+					has_dynamic_modifier = {
+						modifier = chinese_soviet_low_modifier
+					}
+				}
+			}
+		}
+		on_map_mode = map_only
+		complete_effect = {
+			add_command_power = -10
+		}
+		remove_effect = {
+			FROM = {
+				if = {
+					limit = {
+						has_dynamic_modifier = {
+							modifier = chinese_soviet_heavy_modifier
+						}
+					}
+					ROOT = {
+						add_manpower = -5000
+					}
+					create_unit = {
+						division = "division_template = \"Zhongguo Gongnong Hongjun\"	start_experience_factor = 0.4	start_equipment_factor = 0.5"
+						owner = ROOT
+						allow_spawning_on_enemy_provs = yes
+						count = 5
+					}
+				}
+				else_if = {
+					limit = {
+						has_dynamic_modifier = {
+							modifier = chinese_soviet_normal_modifier
+						}
+					}
+					ROOT = {
+						add_manpower = -3000
+					}
+					create_unit = {
+						division = "division_template = \"Zhongguo Gongnong Hongjun\"	start_experience_factor = 0.4	start_equipment_factor = 0.5"
+						owner = ROOT
+						allow_spawning_on_enemy_provs = yes
+						count = 3
+					}
+				}
+				else = {
+					ROOT = {
+						add_manpower = -1000
+					}
+					create_unit = {
+						division = "division_template = \"Zhongguo Gongnong Hongjun\"	start_experience_factor = 0.4	start_equipment_factor = 0.5"
+						owner = ROOT
+						allow_spawning_on_enemy_provs = yes
+						count = 1
+					}
+				}
+			}
+		}
+		ai_will_do = {
+			factor = 25
+		}
+	}
+	CHI_long_march = {
+		icon = GFX_decision_eng_blackshirt_march
+		allowed = {
+			is_china_or_warlord_no_tt = yes
+		}
+		visible = {
+			has_country_flag = CHI_soviet_republic_flag
+			has_global_flag = long_march
+			NOT = {
+				has_country_flag = long_march
+			}
+			FROM = {
+				OR = {
+					has_dynamic_modifier = {
+						modifier = chinese_soviet_heavy_modifier
+					}
+					has_dynamic_modifier = {
+						modifier = chinese_soviet_normal_modifier
+					}
+					has_dynamic_modifier = {
+						modifier = chinese_soviet_low_modifier
+					}
+				}
+				owner = {
+					is_china_or_warlord_no_tt = yes
+					NOT = {
+						has_government = communism
+					}
+				}
+			}
+		}
+		days_remove = 365
+		cost = 0
+		fire_only_once = no
+		cancel_if_not_visible = yes
+		days_re_enable = 120
+		state_target = yes
+		target_trigger = {
+			FROM = {
+				state = 622
+			}
+		}
+		on_map_mode = map_and_decisions_view
+		remove_effect = {
+			500 = {
+				owner = {
+					country_event = {
+						id = ww1_china.300
+						hours = 10
+					}
+				}
+			}
+		}
+		ai_will_do = {
+			base = 500
+		}
+	}
 }
 
 CHI_chinese_warlords = {
