@@ -340,10 +340,12 @@ ideas = {
 			}
 			allowed_civil_war = { has_government = communism }
 			modifier = {
-				army_core_defence_factor = 0.50
-				army_core_attack_factor = -0.50
+				attrition = -0.5
+				supply_consumption_factor = -0.8
+				equipment_capture_factor = 0.5
+				army_speed_factor = 0.2
 				political_power_factor = -0.25
-				surrender_limit = 0.1
+				max_surrender_limit_offset = 0.01
 				weekly_manpower = -1800
 				hidden_modifier = {
 					ai_get_ally_desire_factor = -1000
