@@ -7799,39 +7799,18 @@
 					}
 				}
 				add_ideas = CHI_idea_long_march
-				PRC_mao_zedong = {
-					if = {
-						limit = {
-							has_ideology = agrarian_socialism
-						}
-						promote_character = agrarian_socialism
+				set_global_flag = long_march
+				random_enemy_country = {
+					limit = {
+						is_china_or_warlord_no_tt = yes
 					}
-					else = {
-						add_country_leader_role = {
-							promote_leader = yes
-							country_leader = {
-								ideology = agrarian_socialism
-								traits = { cornered_fox }
-							}
-						}
-					}
-					if = {
-						limit = {
-							has_ideology = stratocracy
-						}
-						promote_character = stratocracy
-					}
-					else = {
-						add_country_leader_role = {
-							promote_leader = yes
-							country_leader = {
-								ideology = stratocracy
-								traits = { cornered_fox }
-							}
+					PREV = {
+						become_exiled_in = {
+							target = PREV
+							legitimacy = 0
 						}
 					}
 				}
-				set_global_flag = long_march
 			}
 			# Entente leader transfer
 			if = {
