@@ -2567,10 +2567,56 @@ country_event = {
 	}
 }
 
-#reuse
-# country_event = {
-# 	id = ww1_china.9
-# }
+# Zunyi Conference
+country_event = {
+	id = ww1_china.9
+	title = ww1_china.9.t
+	desc = ww1_china.9.d
+	picture = GFX_report_event_chinese_soviet
+	trigger = {
+		has_decision = CHI_long_march
+		has_character = PRC_mao_zedong
+	}
+	fire_only_once = yes
+	mean_time_to_happen = {
+		days = 120
+	}
+	option = {
+		name = ww1_china.9.a
+		PRC_mao_zedong = {
+			if = {
+				limit = {
+					has_ideology = agrarian_socialism
+				}
+				promote_character = agrarian_socialism
+			}
+			else = {
+				add_country_leader_role = {
+					promote_leader = yes
+					country_leader = {
+						ideology = agrarian_socialism
+						traits = { cornered_fox }
+					}
+				}
+			}
+			if = {
+				limit = {
+					has_ideology = stratocracy
+				}
+				promote_character = stratocracy
+			}
+			else = {
+				add_country_leader_role = {
+					promote_leader = yes
+					country_leader = {
+						ideology = stratocracy
+						traits = { cornered_fox }
+					}
+				}
+			}
+		}
+	}
+}
 
 # DEATH OF YUAN SHIKAI
 #########################
@@ -10323,22 +10369,21 @@ country_event = {
 					name = "Zhongguo Gongnong Hongjun"
 					division_names_group = CHI_INF_01
 					regiments = {
-						infantry = { x = 0 y = 0 }
-						infantry = { x = 0 y = 1 }
-						infantry = { x = 0 y = 2 }
-						field_gun_brigade = { x = 0 y = 3 }
-						infantry = { x = 1 y = 0 }
-						infantry = { x = 1 y = 1 }
-						infantry = { x = 1 y = 2 }
-						field_gun_brigade = { x = 1 y = 3 }
+						irregular_infantry = { x = 0 y = 0 }
+						irregular_infantry = { x = 0 y = 1 }
+						irregular_infantry = { x = 0 y = 2 }
+						irregular_infantry = { x = 1 y = 0 }
+						irregular_infantry = { x = 1 y = 1 }
+						irregular_infantry = { x = 1 y = 2 }
 					}
 					support = {
 						engineer = { x = 0 y = 0 }
 					}
+					is_locked = yes
 				}
 				capital_scope = {
 					create_unit = {
-						division = "division_template = \"Zhongguo Gongnong Hongjun\"	start_experience_factor = 0.4	start_equipment_factor = 1"
+						division = "division_template = \"Zhongguo Gongnong Hongjun\"	start_experience_factor = 0.8	start_equipment_factor = 1"
 						owner = PREV
 						allow_spawning_on_enemy_provs = yes
 						count = 5
@@ -25513,68 +25558,63 @@ country_event = {
 	title = ww1_china.300.t
 	desc = ww1_china.300.d
 	picture = GFX_report_event_chinese_soldiers_mountain
-	fire_only_once = yes
+	is_triggered_only = yes
 	trigger = {
-		has_global_flag = chinese_soviet_republic
 		has_global_flag = long_march
 		is_china_or_warlord_no_tt = yes
-		owns_state = 622
 		NOT = {
 			has_government = communism
-			country_exists = PRC
-			any_other_country = {
-				is_china_or_warlord_no_tt = yes
-				has_government = communism
-			}
 		}
 	}
-	mean_time_to_happen = {
-		days = 365
-	}
+	fire_only_once = yes
 	immediate = {
 		hidden_effect = {
-			PRC = {
+			CSR = {
+				add_state_core = 622
 				transfer_state = 622
+				if = {
+					limit = {
+						is_government_in_exile = yes
+					}
+					end_exile = yes
+				}
 				every_other_country = {
 					limit = {
-						is_china_or_warlord = yes
+						is_china_or_warlord_no_tt = yes
 					}
-					white_peace = ROOT
+					if = {
+						limit = {
+							has_war_with = PREV
+						}
+						white_peace = PREV
+					}
+					if = {
+						limit = {
+							NOT = { has_government = PREV }
+						}
+						send_embargo = PRC
+					}
 					set_truce = {
-						target = ROOT
+						target = PREV
 						days = 365
 					}
 				}
 				remove_ideas = standing_alone
-				load_oob = CSR_1931
-				PRC_mao_zedong = {
-					if = {
-						limit = {
-							has_ideology = agrarian_socialism
-						}
-						promote_character = agrarian_socialism
-					}
-					else = {
-						add_country_leader_role = {
-							country_leader = {
-								ideology = agrarian_socialism
-								traits = { cornered_fox }
-							}
-						}
-					}
+				delete_unit_template_and_units = {
+					division_template = "Zhongguo Gongnong Hongjun"
+					disband = no
 				}
+				load_oob = CSR_1931
 				set_country_flag = long_march
 			}
 		}
 	}
 	option = {
 		name = ww1_china.300.a
-		send_embargo = PRC
 	}
 	option = {
 		name = ww1_china.300.b
 		trigger = { is_ai = no }
-		send_embargo = PRC
 		PRC = { change_tag_from = ROOT }
 	}
 }
