@@ -2082,9 +2082,13 @@
  CHI_KMT_local_investment_desc:0 "Through a series of measures, such as improving the local environment and reorganising the administrative structure, we will satisfy local leaders and make residents more favourable towards our government."
  CHI_declare_war_CER:0 "Move Troops into [FROM.GetNameDef]"
  CHI_declare_war_CER_desc:0 "Due to the unique legal status of [FROM.GetNameDefCap]-inherently Chinese territory, yet constituted as a railway concession, administered by enemy—our forces have hitherto hesitated to advance. At this point, however, any conflict with the railway company or friction with the local inhabitants is no longer a deterrent."
- CHI_remove_socialist_influence: "Launch the Encirclement Campaigns"
+ CHI_remove_socialist_influence: "Launch the Encirclement Campaigns In [FROM.GetName]"
  CHI_remove_socialist_influence_desc: "In the harsh and backward regions of many Chinese provinces, socialists have entrenched themselves, proclaiming council republics, engaging in banditry, inciting peasants, and engaging in riots and looting. It will take considerable time, effort, and money, but unless we eradicate them, our country will never be stable."
  CHI_TIB_border_war:0 "Sino-Tibetan War"
+ CHI_activate_socialist_influence:0 "Spread Socialism In [FROM.GetName]"
+ CHI_raise_socialist_militia:0 "Raise Socialist Militias In [FROM.GetName]"
+ CHI_long_march:0 "The Great Long March"
+ CHI_long_march_desc:0 "The Revolution in China has encountered a major setback. Due to the relentless suppression and brutal blockade policies of the reactionaries, the Soviet Zone we liberated can no longer survive. To break through the enemy encirclement and establish a base in the mountainous regions, we must march thousands of kilometres... After enduring these hardships and adversities, the chaff will be blown away, leaving only the grain fit to fight as revolutionary warriors."
 
 
  TUR_OPDA_CURRENCY_TOOLTIP:0 "§o                            Exchange Rates                      §!\n§d-----------------------------------------------------------------§!\n§Y3%§! §vConsumer Goods Factories factor =§! §Y0.295 Thousand Liras§!\n§d----------------------------------------------------------------§!"
