@@ -6598,6 +6598,9 @@ ww1_france.626.c:0 "Forwards!"
  ww1_china.8.d: "General Zhang Xun made an attempt to restore the monarchy. Beijing is controlled by the Qing Dynasty. We did not have time to prevent the conspiracy of the monarchists and again must confront the empire. Facing this absurd, the president resigned taking his responsibility and Zhang dismissed the National Assembly by force. \nWith lost the capital, this will provoke cliques to intensify the struggle for power."
  ww1_china.8.a: "We will defend the republic."
  ww1_china.8.b: "Final Showdown. (Play as [QIN.GetFlag]Qing)"
+ ww1_china.9.t: "The Party Reorganization" #Zunyi Conference
+ ww1_china.9.d: "During the Great Long March, we began to reflect on why our Party and revolution were enduring such hardship. We concluded that the responsibility lay with the Party leadership. To steer the revolution to success and ensure our survival, we judged that the Party must be led not by idealists or theorists, but by Mao Zedong-a formidable military leader who understood China's realities. Mao, who believed the revolution must be ignited from the peasantry, is the man to save our Party from the brink of destruction and one day raise the red flag across all of China. But when that time comes, will the people truly be happy?"
+ ww1_china.9.a: "Long live the Chairman Mao!"
  ww1_china.10.t: "Yuan Shikai died"
  ww1_china.10.d: "Yuan Shikai has passed away due to poor health. Plunging the country into chaos and devastation by an attempt to revive the Empire under his rule, he could not lead China out of the crisis.\nThe death of the ruler in such a difficult time will only worsen the situation in the country and provoke even more uprisings."
  ww1_china.10.d2: "Yuan Shikai has passed away due to poor health. He had kept his loyalty to Qing dynasty even though he was greedy, ambitious general who almost had dictatorial power of all China. For now, the Beiyang Army still stands under his successor, but it has been certainly winded."
