@@ -2501,7 +2501,8 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  soviet_advisors:0 "Soviet Advisors"
  CHI_socialist_bureaucracy:0 "Socialist Bureaucracy"
  CHI_union_in_power:0 "United Unions of Chinese Workers"
- CHI_idea_long_march:0 "Long March"
+ CHI_idea_long_march:0 "Great Long March"
+ CHI_idea_long_march_desc:0 "The Revolution in China has encountered a major setback. Due to the relentless suppression and brutal blockade policies of the reactionaries, the Soviet Zone we liberated can no longer survive. To break through the enemy encirclement and establish a base in the mountainous regions, we must march thousands of kilometres... After enduring these hardships and adversities, the chaff will be blown away, leaving only the grain fit to fight as revolutionary warriors."
  CHI_idea_national_protection:0 "National Protection"
  CHI_idea_national_protection_desc:0 "We shall save the characters of the 400 million people of the Republic of China!\n- Cai E"
  CHI_idea_fallen_empire:0 "Fallen Empire"
