@@ -1,9 +1,11 @@
 # New Contents
--
+- 
 
 # Tweaks and Fixes
 - Tweaked Haldane mission and fixed Brtitish neutrality
 - Fixed Bosnian condominium idea
 - Rebalanced Xinhai Revolution
 - Tweaked Warlord Era trigger for Maintain the Status Quo focus
+- Tweaked Soviet Chinese decisions
+- Adjusted Oldenburg state
 - Other unlisted fixes and tweaks;
